# r5sdk

./: .gitignore  CreateSolution.bat  README.md  old-bots.cpp
src/: CMakeLists.txt
src/cmake/: Deployment.cmake  Macros.cmake  Options.cmake
src/codecs/: CMakeLists.txt
src/codecs/fmod/: audio_backend.h  audio_backend_state.cpp  studio_backend.cpp
src/codecs/miles/: audio_overrides.cpp  audio_overrides.h  miles_impl.cpp  miles_impl.h  miles_overrides.cpp  miles_overrides.h  miles_pcm.cpp  miles_pcm.h  miles_shim.cpp  radshal_wasapi.h  wav_player.cpp  wav_player.h
src/common/: callback.cpp  callback.h  completion.cpp  completion.h  engine_launcher_api.h  global.cpp  global.h  igameserverdata.h  netmessages.cpp  netmessages.h  opcodes.cpp  opcodes.h  sdkdefs.h  sdkint.h
src/core/: CMakeLists.txt  dllmain.cpp  init.cpp  logger.cpp  r5dev.h  shared_pch.h  stdafx.h
src/datacache/: mdlcache.h
src/ebisusdk/: EbisuSDK.cpp  EbisuSDK.h
src/engine/: CMakeLists.txt  clockdriftmgr.cpp  clockdriftmgr.h  cmd.cpp  cmd.h  cmodel.cpp  cmodel.h  cmodel_bsp.cpp  cmodel_bsp.h  cmodel_bsp_debug.cpp  cmodel_bsp_debug.h  common.cpp  common.h  debugoverlay.cpp  debugoverlay.h  gl_drawlights.h  gl_matsysiface.h  gl_rmain.cpp  gl_rmain.h  gl_rsurf.cpp  gl_rsurf.h  gl_screen.h  host.cpp  host.h  host_cmd.cpp  host_cmd.h  host_state.cpp  host_state.h  keys.h  matsys_interface.cpp  matsys_interface.h  modelloader.cpp  modelloader.h  net.cpp  net.h  net_chan.cpp  net_chan.h  networkstringtable.h  staticprop_bounds_debug.cpp  staticprop_bounds_debug.h  (+18 more)
src/engine/client/: cdll_engine_int.cpp  cdll_engine_int.h  cl_ents_parse.h  cl_main.cpp  cl_main.h  cl_rcon.cpp  cl_rcon.h  cl_splitscreen.h  client.cpp  client.h  clientstate.cpp  clientstate.h  community_party.cpp  community_party.h  datablock_receiver.h  discord_ipc.cpp  discord_ipc.h  discord_presence.cpp  discord_presence.h  discord_rpc_wrapper.cpp  discord_rpc_wrapper.h  steam_api_wrapper.cpp  steam_integration.cpp  steam_integration.h  vengineclient_impl.h
src/engine/server/: datablock_sender.h  server.cpp  server.h  sv_main.cpp  sv_main.h  sv_rcon.cpp  sv_rcon.h  vengineserver_impl.h
src/engine/shared/: base_rcon.cpp  base_rcon.h  datablock.cpp  datablock.h  shared_rcon.cpp  shared_rcon.h
src/filesystem/: CMakeLists.txt  basefilesystem.cpp  basefilesystem.h  filesystem.cpp  filesystem.h  filesystem_std.h
src/game/: CMakeLists.txt
src/game/client/: c_baseentity.cpp  c_baseentity.h  c_player.h  c_zipline_fix.cpp  c_zipline_fix.h  cliententitylist.h  clientleafsystem.cpp  clientleafsystem.h  concommandcallback.cpp  concommandcallback.h  convar_stubs.cpp  convar_stubs.h  enginesprite.h  gamepad.cpp  gamepad.h  hud_basechat.cpp  hud_basechat.h  icliententityinternal.h  input.h  iviewrender.h  movehelper_client.h  particle_effects_sdk.cpp  particle_effects_sdk.h  (+20 more)
src/gameui/: IBrowser.cpp  IBrowser.h  IConsole.cpp  IConsole.h  IDevMenu.cpp  IDevMenu.h  IParticleOverlay.cpp  IParticleOverlay.h  IStreamOverlay.cpp  IStreamOverlay.h  ITopBar.cpp  ITopBar.h  imgui_surface.cpp  imgui_surface.h  imgui_system.cpp  imgui_system.h
src/inputsystem/: inputstacksystem.h  inputsystem.h
src/launcher/: launcher.h  prx.h
src/loader/: loader.cpp
src/localize/: localize.cpp  localize.h
src/materialsystem/: CMakeLists.txt  cmaterialglue.h  cmaterialsystem.cpp  cmaterialsystem.h  cmatqueuedrendercontext.cpp  cmatqueuedrendercontext.h  cmatrendercontext.cpp  cmatrendercontext.h  constbuffer.cpp  constbuffer.h  meshbuilder.cpp  texturestreaming.cpp  texturestreaming.h
src/mathlib/: CMakeLists.txt  MurmurHash.cpp  MurmurHash.h  color.h
src/naveditor/: CMakeLists.txt  CameraUtils.cpp  ChunkyTriMesh.cpp  CrowdTool.cpp  Editor.cpp  EditorInterfaces.cpp  Editor_Common.cpp  Editor_Debug.cpp  Editor_SoloMesh.cpp  Editor_TempObstacles.cpp  Editor_TileMesh.cpp  Filelist.cpp  GameUtils.cpp  InputGeom.cpp  MeshLoaderBsp.cpp  MeshLoaderObj.cpp  MeshLoaderPly.cpp  NavMeshPolyEditTool.cpp  NavMeshPruneTool.cpp  NavMeshTesterTool.cpp  OffMeshConnectionTool.cpp  Sample_TempObstacles.cpp  ShapeVolumeTool.cpp  TestCase.cpp  main.cpp
src/netconsole/: CMakeLists.txt  netconsole.cpp  netconsole.h
src/networksystem/: bansystem.cpp  bansystem.h  hostmanager.cpp  hostmanager.h  listmanager.cpp  listmanager.h  pylon.cpp  pylon.h  serverlisting.h
src/particles/: CMakeLists.txt  particle_effect_callback.cpp  particle_effect_callback.h  particle_overlay.cpp  particle_overlay.h  particles.cpp  particles.h
src/pluginsdk/: CMakeLists.txt  dllmain.cpp  pluginsdk.cpp  pluginsdk.h  vscript_plugindll_defs.h
src/pluginsystem/: ipluginsystem.h  modsystem.cpp  modsystem.h  pluginsystem.cpp  pluginsystem.h
src/protoc/: sig_map.pb.cc  sig_map.pb.h
src/public/: client_class.h  cmodel.h  const.h  edict.h  idebugoverlay.h  irecipientfilter.h  view_shared.h
src/revpk/: CMakeLists.txt  revpk.cpp
src/rtech/: CMakeLists.txt
src/sdklauncher/: CMakeLists.txt  basepanel.cpp  sdklauncher.cpp
src/studiorender/: studiorendercontext.h
src/tier0/: CMakeLists.txt  binstream.cpp  commandline.h  jobthread.cpp  memaddr.cpp  module.cpp  platform.cpp  sigcache.cpp  utility.cpp
src/tier1/: CMakeLists.txt  NetAdr.cpp  cmd.cpp  cvar.cpp  cvar_iface.cpp  exprevaluator.cpp  generichash.cpp  keyvalues.cpp  kverrorstack.h  kvleaktrace.h  memstack.cpp  strtools.cpp
src/tier2/: CMakeLists.txt  crashreporter.cpp  cryptutils.cpp  renderutils.cpp  socketcreator.cpp  websocket.cpp  zstdutils.cpp
src/uisdk/: CMakeLists.txt  ui_sdk.cpp
src/vgui/: CMakeLists.txt  vgui_baseui_interface.cpp  vgui_baseui_interface.h  vgui_debugpanel.cpp  vgui_debugpanel.h  vgui_fpspanel.cpp  vgui_fpspanel.h
src/vguimatsurface/: MatSystemSurface.cpp  MatSystemSurface.h
src/vpc/: CMakeLists.txt  interfaces.h
src/vphysics/: QHull.h  physics_collide.h
src/vpklib/: CMakeLists.txt  packedstore.cpp  packedstore.h
src/vscript/: CMakeLists.txt  vscript.cpp  vscript.h
src/vstdlib/: CMakeLists.txt  autocompletefilelist.h  keyvaluessystem.cpp  keyvaluessystem.h
src/windows/: console.cpp  id3dx.cpp
(+229 files in other folders)
